<resources>
    <string name="app_name">Compostify</string>
    <!--    Pages And Navigation-->
    <string name="about_us">About Us</string>
    <string name="my_cart">My Cart</string>
    <string name="search_title">Search</string>
    <string name="publish_title">Publish</string>
    <string name="profile_title">Profile</string>
    <string name="home">Home</string>
    <!--    Filter-->
    <string name="location_prompt">Location</string>
    <string name="distance_0_km">Distance: 0 km</string>
    <string name="type_of_waste">Type Of Waste</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="more_filters">More Filters</string>
    <!--    Post -->
    <string name="quantity">Quantity of Bags</string>
    <string name="weight">Total Weight(in Kg.)</string>
    <string name="Add_Image">Add Image</string>
    <string name="select">Select</string>
    <string name="other_details">Handling Instruction</string>
    <string name="Address">Address:</string>
    <string name="City">City</string>
    <string name="province">Province</string>
    <string name="PostalCode">Postal Code</string>
    <string name="Building_Name_Number">Building Number and Name</string>

    <string name="waste_type">Waste Type</string>
    <string name="postal_code">Postal Code</string>
    <string name="empty_waste_msg">Sorry! No waste available as of now!</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="see_more">See More</string>


    <string name="save_changes">Save Changes</string>
    <string name="email">Email</string>
    <string name="BusinessName">Business Name</string>
    <string name="type_of_user">Type Of User</string>
    <string name="BusinessPhoneNumber">Business Phone Number</string>
    <string name="_address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="hi_lily">Hi, Lily!</string>
    <string name="welcome_to_compostify_thank_you_for_being_part_of_our_community">Welcome to Compostify. Thank you for being part of our community.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="request_a_pickup_from_your_local_host">Request a pickup from your local host</string>
    <string name="recent_activity">Recent activity</string>
    <string name="date">Date</string>
    <string name="sold_bought">Sold/Bought</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t Have an Account? Register here</string>
    <string name="business_email">Business Email</string>
    <string name="street">Street</string>
    <string name="unit_number">Apt/Unit No.</string>
    <string name="log_out">Log Out</string>
    <string name="post_date">Post Date</string>
    <string name="price">Price</string>
    <string name="post">Post</string>

    <string name="Building_Number">Building Number</string>
    <string name="Building_Name">Building Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_logo">Upload your logo</string>
    <string name="upload_logo">Select logo</string>
    <string name="user_name">User Name</string>
    <string name="available_waste">Waste Quantity</string>
    <string name="update_logo">Update Logo</string>
    <string name="photos">Photos</string>
    <string name="natural_weight">Natural Waste Weight(in Kg.)</string>
    <string name="mix_weight">Mix Waste Weight(in Kg.)</string>
    <string name="clear">Clear</string>
    <string name="clear_images">Clear Images</string>
    <string name="time">Time</string>
    <string name="edit_post">Edit Post</string>
    <string name="view_all_activity">View all Activity</string>
    <string name="delete">Delete</string>
    <string name="active">Active</string>
    <string name="save_post">Save Post</string>
    <string name="deactivate">Deactivate</string>
    <string name="my_orders">My Orders</string>
    <string name="available_waste_type">Available Waste Varities</string>
    <string name="place_order">Place Order</string>
    <string name="order_information">Order Information</string>
    <string name="id_0000">ID:0000</string>
    <string name="product_info">Product Info:</string>
    <string name="payment_info">Payment Info:</string>
    <string name="payment_id">PaymentID:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="payment_time">Payment Time:</string>
    <string name="our_mission">Our Mission</string>
    <string name="checkout">Checkout</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="total_amount">Total Amount</string>
    <string name="_108_university_ave_waterloo_on_n2j_2w2">108, University ave, Waterloo, ON\nN2J 2W2</string>
    <string name="operating_hours">Operating Hours:</string>
    <string name="operating_details">9AM - 6PM\nMon-Fri</string>
    <string name="contact_us">Cotact Us</string>
    <string name="email_team3">dipalisaini0518@gmail.com</string>
    <string name="dipali_saini">Dipali Saini</string>
    <string name="email_team2">jupatel1104@gmail.com</string>
    <string name="jay_patel">Jay patel</string>
    <string name="emailTeam1">riddhimakwana77@gmail.com</string>
    <string name="riddhiben_makwana">Riddhiben Makwana</string>
    <string name="our_team">Our Team</string>
    <string name="our_mission_text" >\"We\'re on a mission on to build a Sustainable future by eliminating food waste and creating a more circular economy.\"</string>
    <string name="posts_list">Posts list</string>
    <string name="i_am_a">I am a..</string>
    <string name="GPSAlertDialogTitle">Permission</string>
    <string name="GPSAlertDialogMessage">This application uses your GPS</string>
    <string name="action_settings">Allow</string>
    <string name="cancel">Don\'t Allow</string>
    <string name="search_address">City Name</string>

</resources>