<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom = "10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtOurMission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_mission"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom = "10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp"
                android:textStyle="italic"
                android:justificationMode="inter_word"
                android:text="@string/our_mission_text"
                style="@style/TextAppearance.Material3.BodyMedium"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtOurTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_team"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom = "10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgTeam1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/riddhi"
                    android:background="@drawable/green_border"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/riddhiben_makwana"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.SearchResult.Title"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/emailTeam1"
                        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgTeam2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/jay"
                    android:background="@drawable/green_border"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jay_patel"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.SearchResult.Title"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/email_team2"
                        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgTeam3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/dipali"
                    android:background="@drawable/green_border"
                    android:layout_gravity="center"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dipali_saini"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.SearchResult.Title"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/email_team3"
                        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom = "10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_108_university_ave_waterloo_on_n2j_2w2"
                style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/operating_hours"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/operating_details"
                style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>