<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary"
    android:padding="16sp">

    <!-- Header: Title and Dropdown -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Filters"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:icon="@drawable/baseline_close_24" />

    </FrameLayout>

    <!-- Location Dropdown -->
    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/location_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:textSize="20sp"
        android:hint="@string/location_prompt"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="300sp" />

    <!-- Waste Type Dropdown -->
    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/waste_type_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/location_dropdown"
        android:hint="@string/waste_type"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="300sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="8sp">

        <!-- Distance Label -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_0_km"/>

        <!-- Distance Slider -->
        <com.google.android.material.slider.Slider
            android:id="@+id/distance_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
    </LinearLayout>

    <!-- Reset Filter Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/reset_filter"
        style="@style/Widget.Material3.Button.OutlinedButton"
        />

    <!-- Apply Filter Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/apply_filter"
        />

</LinearLayout>