<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/secondary"
    app:strokeColor="@color/primary"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Animation.Design.BottomSheetDialog"
        android:padding="12dp"
        android:id="@+id/itemCard">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:id="@+id/imageViewLogo"
            android:background="@drawable/refs"></ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BusinessName"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textColor="@color/primary"
                android:textSize="22sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/address" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtAvailableWaste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/available_waste" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>